--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 hello world 
-hello world hello world hello worldhello world hello world hello world hello worldhello world hello world hello world hello worldhello world hello world hello wo
-rld hello worldvhello world hello world hello world hello worldhello world hello world hello world hello worldhello world hello world hello world hello wo
-rld <h1>hello world hello world hello </h1> patates   world hello worldhello world hello world hello world hello worldh
-ello world hello world hello world hello worldhello world hello world hello world hello worldhello world hello world hello
- world hello worldhello world hello world hello world hello worldhello world hello world hello world hello worldhello world
- hello world hello world hello worldhello world hello world hello world hello worldhello world hello world hello world hello
-  worldhello world hello world hello world hello worldhello world hello world hello world hello worldhello world hello world
-   hello world hello worldhello world hello world hello world hello worldhello world hello world hello world hello worldhello
-   world hello world hello world hello worldhello world hello world hello world hello worldhello world hello world hello world
-    hello worldhello world hello world hello world hello worldhello world hello world hello world hello worldhello world hello
-    world hello world hello worldhello world hello world <h6> patates </h6> hello world hello worldhello world hello world hel
-    lo world hello worldhello world hello world hello world hello world
-    <a href="youtube.com">patates</a>
     <area shape="" coords="" href="" alt="">
     <label for="">potates</label>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AYLİN ATAN</title>
+<body>
+    <h1 style="text-align:center;">AYLİN ATAN</h1>
+    <H1>PROJELER</H1>
+    <H2>ÖZGEÇMİŞ</H2>
+    <TABLE> 
+        <TR>Mimar Sinan Güzel Sanatlar Üniversitesi
+            -Nazilli Anadolu Lisesi
+        </TR>
+    </TABLE>
+    <H3>İLETİŞİM</H3>
+    <TABLE>
+        <TR>aylinatan2000@outlook.com</TR>
+        <th>057777777
+        </th>
+    </TABLE>
+    
+</style></h1>
+</body>
+</html>
