--- a/index.html
+++ b/index.html
@@ -1,28 +1,45 @@
-hello world 
-    <area shape="" coords="" href="" alt="">
-    <label for="">potates</label>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AYLİN ATAN</title>
+<link rel="stylesheet" href="styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+</head>
 <body>
-    <h1 style="text-align:center;">AYLİN ATAN</h1>
-    <H1>PROJELER</H1>
-    <H2>ÖZGEÇMİŞ</H2>
+    <div class="menu">
+        <div class="date"> 26.03.2024</div> 
+        <div class="links"> <div class="signup" >Sign Up</div>
+    <div class="login">Login </div>
+</div>
+    </div>
+    <img class="eighty" src="lrgo man .jpg " alt="">
+    <h1 class="ortala baslık">AYLİN ATAN
+    </h1>
+    <H2 class="ortala">PROJELER</H2>
+    <H2 class="ortala">ÖZGEÇMİŞ</H2>
     <TABLE> 
-        <TR>Mimar Sinan Güzel Sanatlar Üniversitesi
-            -Nazilli Anadolu Lisesi
+        <TR>Mimar Sinan Güzel Sanatlar Üniversitesi Mimarlık Bölümü 3. sınıf öğrencisiyim. 
         </TR>
+        <H2 class="ortala">DENEYİMLER</H2>
+        <tr>2023 Eylül'de Sabri Paşayiğit Design Office'de büro stajımı tamamladım.</tr>
     </TABLE>
+    <h2 class="ortala forty">BECERİLER</h2>
+    <th>AutoCad</th>
+    <br>
+    <th>Sketchup</th>
+    <br> 
+    <th>Lumion</th>
     <H3>İLETİŞİM</H3>
     <TABLE>
         <TR>aylinatan2000@outlook.com</TR>
         <th>057777777
         </th>
     </TABLE>
-    
-</style></h1>
+
 </body>
 </html>
