--- a/index.html
+++ b/index.html
@@ -11,22 +11,56 @@
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 </head>
 <body>
+   <div class="menu-container">
     <div class="menu">
-        <div class="date"> 26.03.2024</div> 
-        <div class="links"> <div class="signup" >Sign Up</div>
-    <div class="login">Login </div>
+    <div class="date"> 16.04.2024</div>
+    <div class="links">
+    <div class="signup"> Sign Up</div> 
+    <div class="login"> <a href="2.html"> Login</a></div>
+</div >
 </div>
+<div class="header-container">
+    <div class="header">
+        <div class="subscribe"> Subscribe &#9662; </div>
+        <div class="logo"> <img src="images/awesome-logo.svg" alt=""></div>
+        <div class="social"><img src="images/social-icons.svg" alt=""></div>
     </div>
-    <img class="eighty" src="lrgo man .jpg " alt="">
+    </div>
+</div>
+<div class="photo-grid-container">
+    <div class="photo-grid">
+        <div class="photo-grid-item"> 
+            <img src="images/one.svg" alt="" class="src"></div>
+    
+    <div class="photo-grid-item">
+        <img src="images/two.svg" alt="" class="src">
+    </div>
+    <div class="photo-grid-item">
+    <img src="images/three.svg" alt="" class="src"></div>
+    <div class="photo-grid-item">
+        <img src="images/four.svg" alt="" class="src"></div>
+        <div class="photo-grid-item">
+            <img src="images/five.svg" alt="" class="src"></div></div>
+</div>
+
     <h1 class="ortala baslık">AYLİN ATAN
     </h1>
-    <H2 class="ortala">PROJELER</H2>
+    <H2 class="ortala">PROJELER
+        <div class="flex-container">
+            <div class="flex-item">MİMARİ PROJE 1</div>
+            <div class="flex-item">MİMARİ PROJE 2</div>
+            <div class="flex-item">UYGULAMA PROJESİ</div>
+        </div>
+
+    </H2>
     <H2 class="ortala">ÖZGEÇMİŞ</H2>
     <TABLE> 
         <TR>Mimar Sinan Güzel Sanatlar Üniversitesi Mimarlık Bölümü 3. sınıf öğrencisiyim. 
         </TR>
         <H2 class="ortala">DENEYİMLER</H2>
-        <tr>2023 Eylül'de Sabri Paşayiğit Design Office'de büro stajımı tamamladım.</tr>
+        <tr>2023 Eylül'de Sabri Paşayiğit Design Office'de büro stajımı tamamladım.
+            Mart 2023'ten beri liseler arası Robotik Kodlama olarak bilinen First Robotic Competition'da gönüllü olarak çalışıyorum.
+        </tr> 
     </TABLE>
     <h2 class="ortala forty">BECERİLER</h2>
     <th>AutoCad</th>
@@ -34,7 +68,6 @@
     <th>Sketchup</th>
     <br> 
     <th>Lumion</th>
-    <H3>İLETİŞİM</H3>
     <TABLE>
         <TR>aylinatan2000@outlook.com</TR>
         <th>057777777
