--- a/2.html
+++ b/2.html
@@ -1,4 +1,45 @@
-helloo
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PROJELER</title>
+<link rel="stylesheet" href="styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+</head>
+<body>
+   <div class="menu-container">
+    <div class="menu">
+    <div class="date"> 16.04.2024</div>
+    <div class="links">
+    <div class="signup"> Sign Up</div> 
+    <div class="login"> Login</div>
+</div >
+</div>
+<div class="header-container">
+    <div class="header">
+        <div class="subscribe"> Subscribe &#9662; </div>
+        <div class="logo"> <a href="index.html"><img src="AA.png" alt=""></a> </div>
+        <div class="social"><a href="https://www.facebook.com/aylin.atan.18/"><img src="images_social_logo/icons8-facebook.svg" alt=""></a></div>
+        <div class="social"><a href="https://www.instagram.com/aylinatn"><img src="images_social_logo/icons8-instagram.svg" alt=""></a></div>
+        <div class="social"><a href="https://www.linkedin.com/in/aylin-atan-16bb16271/"><img src="images_social_logo/icons8-linkedin.svg" alt=""></a></div>
+    </div>
+    </div>
+</div>
+<H1 class="baslıklar"> PROJELER</H1>
+<TABLE> 
+    <H2 class="baslıklar2">MİMARİ PROJE 2 </H2>
+    <tr>
+       <div class="mp2">  <img src="MİMARİ PROJE 2 SERGİ PAFTASI.png" alt="" class="src"> </div>
+    </tr> 
+    <H2 class="baslıklar3">YAPI BİLGİ MODELLEME </H2>
+    <tr>
+    <td><div class="revit"> <img src="revit1.jpg" alt="" class="src"> </div></td>
+   <td> <div class="revit"> <img src="revit 2.jpg" alt="" class="src"> </div> </td></tr>
+</TABLE>
 
-<h1 class="ortala baslık"><a href="index.html">GERİ DÖNÜŞ OLSA KALP SANA GERİ DÖNMEZ Mİ??</a>
-</h1>
+
+</body>
+</html>
