--- a/index.html
+++ b/index.html
@@ -16,62 +16,40 @@
     <div class="date"> 16.04.2024</div>
     <div class="links">
     <div class="signup"> Sign Up</div> 
-    <div class="login"> <a href="2.html"> Login</a></div>
+    <div class="login"> Login</div>
 </div >
 </div>
 <div class="header-container">
     <div class="header">
         <div class="subscribe"> Subscribe &#9662; </div>
-        <div class="logo"> <img src="images/awesome-logo.svg" alt=""></div>
-        <div class="social"><img src="images/social-icons.svg" alt=""></div>
+        <div class="logo"> <a href="index.html"> <img src="AA.png" alt=""></a></div>
+        <div class="social"><a href="https://www.facebook.com/aylin.atan.18/"><img src="images_social_logo/icons8-facebook.svg" alt=""></a></div>
+        <div class="social"><a href="https://www.instagram.com/aylinatn"><img src="images_social_logo/icons8-instagram.svg" alt=""></a></div>
+        <div class="social"><a href="https://www.linkedin.com/in/aylin-atan-16bb16271/"><img src="images_social_logo/icons8-linkedin.svg" alt=""></a></div>
     </div>
     </div>
 </div>
 <div class="photo-grid-container">
     <div class="photo-grid">
         <div class="photo-grid-item"> 
-            <img src="images/one.svg" alt="" class="src"></div>
-    
+            <a href="2.html"> 
+            <img src="projeler.png" alt="" class="src"><a></a> </div>
+            
     <div class="photo-grid-item">
-        <img src="images/two.svg" alt="" class="src">
+        <a href="3.html"> 
+        <img src="eskizler.png" alt="" class="src"><a></a>
     </div>
-    <div class="photo-grid-item">
-    <img src="images/three.svg" alt="" class="src"></div>
-    <div class="photo-grid-item">
-        <img src="images/four.svg" alt="" class="src"></div>
-        <div class="photo-grid-item">
-            <img src="images/five.svg" alt="" class="src"></div></div>
+    </div></div>
 </div>
-
-    <h1 class="ortala baslık">AYLİN ATAN
-    </h1>
-    <H2 class="ortala">PROJELER
-        <div class="flex-container">
-            <div class="flex-item">MİMARİ PROJE 1</div>
-            <div class="flex-item">MİMARİ PROJE 2</div>
-            <div class="flex-item">UYGULAMA PROJESİ</div>
-        </div>
-
-    </H2>
-    <H2 class="ortala">ÖZGEÇMİŞ</H2>
+    <H1 class="ortala">ÖZGEÇMİŞ</H1>
     <TABLE> 
-        <TR>Mimar Sinan Güzel Sanatlar Üniversitesi Mimarlık Bölümü 3. sınıf öğrencisiyim. 
+        <TR>Mart 2023'te Aydın'da doğdum. Lise eğitimini Nazilli Anadolu Lisesi'nde tamamladım. 
+            Ekim 2021'de halen öğrencisi olduğum Mimar Sinan Güzel Sanatlar Üniversitesi Mimarlık Bölümü'nde eğitime başladım.  
         </TR>
         <H2 class="ortala">DENEYİMLER</H2>
         <tr>2023 Eylül'de Sabri Paşayiğit Design Office'de büro stajımı tamamladım.
             Mart 2023'ten beri liseler arası Robotik Kodlama olarak bilinen First Robotic Competition'da gönüllü olarak çalışıyorum.
         </tr> 
-    </TABLE>
-    <h2 class="ortala forty">BECERİLER</h2>
-    <th>AutoCad</th>
-    <br>
-    <th>Sketchup</th>
-    <br> 
-    <th>Lumion</th>
-    <TABLE>
-        <TR>aylinatan2000@outlook.com</TR>
-        <th>057777777
-        </th>
     </TABLE>
 
 </body>
