--- a/3.html
+++ b/3.html
@@ -29,5 +29,12 @@
     </div>
 </div>
 
+<h1>ESKİZLER</h1>
+<br>
+    <div class="eskiz">
+      <img src="eskiz1.jpg" alt="">
+    </div>
+</div>
+</div>
 </body>
 </html>
