--- a/index.html
+++ b/index.html
@@ -44,13 +44,21 @@
     <H1 class="ortala">ÖZGEÇMİŞ</H1>
     <TABLE> 
         <TR>Mart 2023'te Aydın'da doğdum. Lise eğitimini Nazilli Anadolu Lisesi'nde tamamladım. 
-            Ekim 2021'de halen öğrencisi olduğum Mimar Sinan Güzel Sanatlar Üniversitesi Mimarlık Bölümü'nde eğitime başladım.  
+            Ekim 2021'de halen öğrencisi olduğum Mimar Sinan Güzel Sanatlar Üniversitesi Mimarlık Bölümü'nde eğitime başladım. 
+            <br>
         </TR>
+        <br>
         <H2 class="ortala">DENEYİMLER</H2>
         <tr>2023 Eylül'de Sabri Paşayiğit Design Office'de büro stajımı tamamladım.
             Mart 2023'ten beri liseler arası Robotik Kodlama olarak bilinen First Robotic Competition'da gönüllü olarak çalışıyorum.
         </tr> 
     </TABLE>
+    <br>
+    <div class="iletişim">
+        <h2 class="iletişim">İletişime Geçin</h2>
+        <p class="mail">Our mailing address is: aylinatan2000@outlook.com<br>Beşiktaş/İSTANBUL<br>Phone: 705-742-3221
+        </p>
+      </div>
 
 </body>
 </html>
