--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
         <p class="mail">Our mailing address is: aylinatan2000@outlook.com<br>Beşiktaş/İSTANBUL<br>Phone: 705-742-3221
         </p>
       </div>
+      <br>
+      <br>
+      <br>
+      <div class="son"> Sayfamız yapım aşamasındadır.</div>
 
 </body>
 </html>
