--- a/2.html
+++ b/2.html
@@ -10,35 +10,31 @@
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-   <div class="menu-container">
-    <div class="menu">
-    <div class="date"> 16.04.2024</div>
-    <div class="links">
-    <div class="signup"> Sign Up</div> 
-    <div class="login"> Login</div>
-</div >
-</div>
+
+
 <div class="header-container">
     <div class="header">
-        <div class="subscribe"> Subscribe &#9662; </div>
-        <div class="logo"> <a href="index.html"><img src="AA.png" alt=""></a> </div>
+       
+        <a href="index.html"><img src="AA.png" style="max-width: 100%;" alt=""></a> 
         <div class="social"><a href="https://www.facebook.com/aylin.atan.18/"><img src="images_social_logo/icons8-facebook.svg" alt=""></a></div>
         <div class="social"><a href="https://www.instagram.com/aylinatn"><img src="images_social_logo/icons8-instagram.svg" alt=""></a></div>
         <div class="social"><a href="https://www.linkedin.com/in/aylin-atan-16bb16271/"><img src="images_social_logo/icons8-linkedin.svg" alt=""></a></div>
     </div>
     </div>
+<div class="flex column-flex padding-all-5">
+    
+    <H1 class="baslıklar"> PROJELER</H1>
+    <TABLE>
+        <H2 class="baslıklar2">MİMARİ PROJE 2 </H2>
+        <tr>
+           <div class="mp2">  <img src="MİMARİ PROJE 2 SERGİ PAFTASI.png" alt="" class="src"> </div>
+        </tr>
+        <H2 class="baslıklar3">YAPI BİLGİ MODELLEME </H2>
+        <tr>
+        <td><div class="revit"> <img src="revit1.jpg" alt="" class="src"> </div></td>
+       <td> <div class="revit"> <img src="revit 2.jpg" alt="" class="src"> </div> </td></tr>
+    </TABLE>
 </div>
-<H1 class="baslıklar"> PROJELER</H1>
-<TABLE> 
-    <H2 class="baslıklar2">MİMARİ PROJE 2 </H2>
-    <tr>
-       <div class="mp2">  <img src="MİMARİ PROJE 2 SERGİ PAFTASI.png" alt="" class="src"> </div>
-    </tr> 
-    <H2 class="baslıklar3">YAPI BİLGİ MODELLEME </H2>
-    <tr>
-    <td><div class="revit"> <img src="revit1.jpg" alt="" class="src"> </div></td>
-   <td> <div class="revit"> <img src="revit 2.jpg" alt="" class="src"> </div> </td></tr>
-</TABLE>
 
 
 </body>
