--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
           <br>
           <div class="son"> Sayfamız yapım aşamasındadır.</div>
 </div>
-
+<script src="java.js"></script>
 </body>
 </html>
