--- a/3.html
+++ b/3.html
@@ -12,16 +12,10 @@
 <body>
    <div class="menu-container">
     <div class="menu">
-    <div class="date"> 16.04.2024</div>
-    <div class="links">
-    <div class="signup"> Sign Up</div> 
-    <div class="login"> Login</div>
 </div >
 </div>
 <div class="header-container">
     <div class="header">
-        <div class="subscribe"> Subscribe &#9662; </div>
-        <div class="logo"> <a href="index.html"> <img src="AA.png" alt=""></a></div>
         <div class="social"><a href="https://www.facebook.com/aylin.atan.18/"><img src="images_social_logo/icons8-facebook.svg" alt=""></a></div>
         <div class="social"><a href="https://www.instagram.com/aylinatn"><img src="images_social_logo/icons8-instagram.svg" alt=""></a></div>
         <div class="social"><a href="https://www.linkedin.com/in/aylin-atan-16bb16271/"><img src="images_social_logo/icons8-linkedin.svg" alt=""></a></div>
@@ -32,9 +26,12 @@
 <h1>ESKİZLER</h1>
 <br>
     <div class="eskiz">
-      <img src="eskiz1.jpg" alt="">
+      <img id= 'myImage' src="eskiz1.jpg" alt="">
+      <button onclick="bbb()"> Change Image Source</button>
     </div>
 </div>
 </div>
+
+<script src="java.js"></script>
 </body>
 </html>
