--- a/index.html
+++ b/index.html
@@ -11,18 +11,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-   <div class="menu-container">
-    <div class="menu">
-    <div class="date"> 16.04.2024</div>
-    <div class="links">
-    <div class="signup"> Sign Up</div> 
-    <div class="login"> Login</div>
-</div >
 </div>
 <div class="header-container">
     <div class="header">
-        <div class="subscribe"> Subscribe &#9662; </div>
-        <div class="logo"> <a href="index.html"> <img src="AA.png" alt=""></a></div>
         <div class="social"><a href="https://www.facebook.com/aylin.atan.18/"><img src="images_social_logo/icons8-facebook.svg" alt=""></a></div>
         <div class="social"><a href="https://www.instagram.com/aylinatn"><img src="images_social_logo/icons8-instagram.svg" alt=""></a></div>
         <div class="social"><a href="https://www.linkedin.com/in/aylin-atan-16bb16271/"><img src="images_social_logo/icons8-linkedin.svg" alt=""></a></div>
@@ -41,8 +32,10 @@
             <img src="eskizler.png" alt="" class="src"><a></a>
         </div>
         </div></div>
+        <button onclick="createNewDiv()">Naber cınım</button>
     
-        <H1 class="ortala">ÖZGEÇMİŞ</H1>
+        <H1 id="aylin" class="ortala">ÖZGEÇMİŞ</H1>
+        <button onclick= 'addItalic()'>myButton</button>
         <TABLE>
             <TR>Mart 2023'te Aydın'da doğdum. Lise eğitimini Nazilli Anadolu Lisesi'nde tamamladım.
                 Ekim 2021'de halen öğrencisi olduğum Mimar Sinan Güzel Sanatlar Üniversitesi Mimarlık Bölümü'nde eğitime başladım.
@@ -66,5 +59,8 @@
           <div class="son"> Sayfamız yapım aşamasındadır.</div>
 </div>
 <script src="java.js"></script>
+
+
+
 </body>
 </html>
