--- a/3.html
+++ b/3.html
@@ -1,37 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ESKİZLER</title>
-<link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Aylin Atan Portfolyo">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="John Doe">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AYLİN ATAN</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+        </style>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playwrite+PE:wght@100..400&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playwrite+PE:wght@100..400&display=swap" rel="stylesheet">
+
 </head>
 <body>
-   <div class="menu-container">
-    <div class="menu">
-</div >
-</div>
-<div class="header-container">
-    <div class="header">
-        <div class="social"><a href="https://www.facebook.com/aylin.atan.18/"><img src="images_social_logo/icons8-facebook.svg" alt=""></a></div>
-        <div class="social"><a href="https://www.instagram.com/aylinatn"><img src="images_social_logo/icons8-instagram.svg" alt=""></a></div>
-        <div class="social"><a href="https://www.linkedin.com/in/aylin-atan-16bb16271/"><img src="images_social_logo/icons8-linkedin.svg" alt=""></a></div>
-    </div>
-    </div>
-</div>
+   <div class="page-wrapper">
+       <h1 id="header" class="center roboto-thin padding-30"> <a href="index.html" >AYLİN ATAN</a></h1>
+<div class="center roboto-light text-shadow ">
+<h2>D R A W I N G S</h2> </div>
 
-<h1>ESKİZLER</h1>
-<br>
-    <div class="eskiz">
-      <img id= 'myImage' src="eskiz1.jpg" alt="">
-      <button onclick="bbb()"> Change Image Source</button>
-    </div>
-</div>
-</div>
+<div class="div"><img src="GALATA-KÜTÜPHANE.png" class="img-eskiz"  alt=""> </div>
 
+
+
+
+
+<div class="padding-10" style=" position: relative; padding-top: 10%;"><div class="flex gap yataydaortala" >
+    <div class="flex roboto-thin c"><a  href="https://www.linkedin.com/in/aylin-atan-16bb16271/"> Linkedin </a> </div>
+        <div class=" roboto-thin flex c"><a href="https://www.instagram.com/aylinatn?igsh=NWN5dnhtYml4ZGVx&utm_source=qr">Instagram  </a>   </div>
+       
+    <div class="flex column-flex c">
+    <div style="position: relative; top: 0; left: 0; overflow: visible;">
+    <div style="position: absolute;">
+        <button class="contact-button  yataydaortala gap flex "   onclick="myFunction()">Contact</button>
+            <div id="myDIV" class="contact-bar">
+                <div class=" playfair-display-uniquifier " >
+                <p> 20211301097@ogr.msgsu.edu.tr</p>
+                 <p> 20211301097@ogr.msgsu.edu.tr</p>
+                 <p>Phone: +90 541 814 1264</p>
+               </div> </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
 <script src="java.js"></script>
 </body>
 </html>
